# twitch-drop-notifier

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  testboi.py  testboi2.py
,github/: renovate.json
.github/: SECURITY.md  copilot-instructions.md
.github/workflows/: ruff.yml
config/: settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  data.py  discord.py  forms.py  import_json.py  models.py  models_utils.py  settings.py  signals.py  testboi.py  urls.py  views.py  wsgi.py
core/management/commands/: scrape_local.py  scrape_twitch.py
core/migrations/: 0001_initial.py  0001_squashed_0003_alter_benefit_options_alter_channel_options_and_more.py  0002_alter_benefit_time_based_drop_and_more.py  0002_alter_user_options.py  0002_delete_channel.py  0002_remove_discordsetting_notification_type_and_more.py  0002_rename_id_dropcampaign_twitch_id.py  0003_alter_benefit_created_at_and_more.py  0003_rename_sub_goal_rewardcampaign_subs_goal.py  0003_subscription.py  0004_alter_channel_display_name_alter_channel_twitch_url_and_more.py  0004_alter_dropcampaign_name_alter_game_box_art_url_and_more.py  0004_alter_game_created_at.py  0004_historicaldiscordsetting_historicalsubscription.py  0005_alter_benefit_options_alter_dropcampaign_options_and_more.py  0005_discordsetting_created_at_and_more.py  0006_benefit_image_dropcampaign_image_game_image_and_more.py  0007_alter_game_options_alter_owner_options_and_more.py  0008_dropcampaign_scraped_json_and_more.py  0009_scrapedjson_alter_dropcampaign_scraped_json_and_more.py
core/models/: twitch.py
core/templates/: add_discord_webhook.html  base.html  game.html  games.html  index.html  reward_campaigns.html  webhooks.html
core/templates/partials/: alerts.html  game_card.html  header.html  info_box.html  news.html  reward_campaign_card.html  reward_campaigns_toc.html  toc.html
core/templatetags/: campaign_tags.py  custom_filters.py  game_tags.py  time_filters.py
core/tests/: conftest.py  response.json  test_views.py  view_test.py  views_test.py
core/views/: games.py  index.py  webhooks.py
static/: manifest.webmanifest  style.css
static/css/: style.css
static/js/: index.js
templates/: base.html  contact.html  index.html  privacy.html  terms.html
tests/: models_test.py
twitch/: api.py  apps.py  models.py  urls.py
twitch/management/commands/: scrape_twitch.py
twitch/migrations/: 0001_initial.py  0002_alter_dropcampaign_options_alter_dropcampaign_game_and_more.py  0003_channel_added_at_channel_modified_at_and_more.py  0004_alter_dropcampaign_options.py  0005_game_twitch_url.py
twitch_app/: admin.py  api.py  apps.py  models.py
twitch_app/management/commands/: scrape_twitch.py
twitch_app/migrations/: 0001_initial.py  0002_alter_rewardcampaign_about_url_and_more.py  0002_game_image_url.py  0003_alter_game_display_name_alter_game_slug_and_more.py  0003_historicaldropbenefit_historicaldropcampaign_and_more.py  0004_alter_reward_id_alter_rewardcampaign_id.py  0004_remove_user_drop_campaigns_delete_historicaluser_and_more.py  0005_alter_dropbenefit_options_alter_dropcampaign_options_and_more.py  0005_channel_owner_and_more.py  0006_alter_dropbenefit_options_alter_dropcampaign_options_and_more.py  0006_rewardcampaign_unlock_requirements_and_more.py  0007_alter_dropcampaign_time_based_drops.py  0007_alter_dropcampaign_time_based_drops_and_more.py  0008_alter_allow_options_alter_benefit_options_and_more.py  0008_alter_dropbenefit_game_and_more.py  0009_alter_benefit_entitlement_limit_and_more.py  0010_frontendchannel_frontendgame_frontendorg_and_more.py
twitch_drop_notifier/: apps.py  models.py  urls.py  views.py
twitch_drop_notifier/migrations/: 0001_initial.py
